# causal_discovery

./: .bootstrap_env.sh  .gitignore  .ignore  AGENTS.md  ANALYSIS.md  CHANGE.md  COMMIT_MSG.txt  ENHANCE.md  Improvements.md  README.md  ResultReview.md  TODO.md  bootstrap_uv.sh  deploy.sh  environment.yml  opencode.json  pyproject.toml  requirements-bayesdag.txt
.github/workflows/: deploy.yml
.opencode/agents/: analyst.md  coder.md  researcher.md  reviewer.md  website_maintainer.md  writer.md
client/: README.md  SOURCE_MAP.md  WEBSITE_MAINTENANCE_PLAN.md  generate-source-map.mjs  index.html  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.svelte  app.css  app.scss  main.ts  types.ts
docs/: BAYESDAG_SETUP.md  CLASS_STRUCTURE.md  DESIGN.md  PRETRAINING_CONFIG.md  PROFILING.md  RUNBOOK.md  THESIS_RESULTS_PIPELINE.md  THESIS_VIABILITY_PLAN.md  USER_STORIES.md  architecture.md  proposal.md  thesis
experiments/benchmark_suite/: audit_chaos.yaml  audit_functional.yaml  audit_pnl.yaml  audit_structural.yaml  full_audit.yaml  train_competence.yaml
experiments/configs/: bcnp_large.yaml  bcnp_paper.yaml  (+3 more)
scripts/: bootstrap_uv.sh  diagnose_slurm_gpu_allocation.sh  probe_gpu_allocation_sequence.sh  run_all_models.sh  run_avici.sh  run_avici_srun.sh  run_avici_torchrun.sh  run_bayesdag.sh  run_bcnp.sh  run_bcnp_a100_equiformer_style.sh  run_bcnp_smoke_multigpu.sh  run_bcnp_srun.sh  run_bcnp_torchrun.sh  run_dibs.sh  setup_cluster.sh  submit_ablation_suite.sh  submit_all_models.sh
src/: architecture.md
tests/: test_scm.py  test_visualization.py
(+299 files in other folders)
